# cf-job-logs

./: .copier-answers.yml  .gitattributes  LICENSE  README.md  SECURITY.md  pixi.toml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: build.yml  ci.yml  scorecard.yml
cf_job_logs/: azure_devops_api.py  cli.py  download.py  fetch_records.py  github_api.py  models.py  polling.py  sanitize.py
tests/: conftest.py  test_azure_devops_api.py  test_cli.py  test_cli_vcr.py  test_core.py  test_download.py  test_fetch_records.py  test_github_api.py  test_models.py  test_polling.py  test_sanitize.py
tests/cassettes/: test_download_prs[bun-feedstock-pr10].yaml  test_download_prs[jaxlib-feedstock-pr336].yaml  test_download_prs[tensorflow-feedstock-pr474].yaml  test_full_workflow[bun-feedstock-pr10].yaml  test_full_workflow[tensorflow-feedstock-pr473].yaml  test_list_jobs[bun-feedstock-pr10].yaml  test_list_jobs_failed_only[bun-feedstock-pr10].yaml  test_wait_for_ci[staged-recipes-pr32631].yaml  test_wait_for_ci_fail_fast[cf-autotick-bot-test-package-feedstock-pr445].yaml
tests/cassettes/test_download_prs[https:/github.com/conda-forge/bun-feedstock/pull/: 10].yaml
tests/data/: long_log_conda_build.txt  long_log_rattler_build.txt  onnx-recipe.yaml
tests/fixtures/: mock_httpx_async_client.py  mock_httpx_client.py
