[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]

[tool.setuptools_scm]
version_scheme = "post-release"

[project]
name = "cf-job-logs"
description = "A utility for fetching and structuring conda-forge Azure CI logs into clean, agent-readable artifacts."
authors = [{ name = "ManuelLerchnerQC", email = "manuel.lerchner@quantco.com" }]
dynamic = ["version"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.13"
readme = "README.md"
dependencies = []

[project.urls]
repository = "https://github.com/quantco/cf-job-logs"

[tool.setuptools.packages.find]
include = ["cf_job_logs"]

[project.scripts]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = [
  "N803", # https://docs.astral.sh/ruff/rules/invalid-argument-name
  "N806", # https://docs.astral.sh/ruff/rules/non-lowercase-variable-in-function
  "E501", # https://docs.astral.sh/ruff/faq/#is-the-ruff-linter-compatible-with-black
]
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pep8-naming
  "N",
  # pyupgrade
  "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = '3.13'
no_implicit_optional = true
check_untyped_defs = true

# If you run into `missing library stubs or py.typed marker` errors
# and no stubs are available for this library, you can add an override
# to ignore the missing imports.
# [[tool.mypy.overrides]]
# module = ["my_module"]
# ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.typos]
default.extend-ignore-re = [
  # Disable spell-checking for an individual line.
  "(?Rm)^.*(#|//)\\s*spellchecker:disable-line$",
  # Disable spell-checking for a code block.
  "(?s)(#|//)\\s*spellchecker:off.*?\\n\\s*(#|//)\\s*spellchecker:on",
]

[tool.typos.files]
extend-exclude = ["tests/data/**", "tests/cassettes/**"]
